Fix exception in Java 17