@@ -63,7 +63,7 @@ public class ExprLootItems extends SimpleExpression<ItemStack> {
 		if (this.context != null)
 			context = this.context.getSingle(event);
 		else
-			context = new LootContextWrapper(Bukkit.getWorlds().getFirst().getSpawnLocation()).getContext();
+			context = new LootContextWrapper(Bukkit.getWorlds().get(0).getSpawnLocation()).getContext();
 		if (context == null)
 			return new ItemStack[0];
 
